@@ -734,19 +734,24 @@ class NameFixer
 
 		$join = $this->_preFTsearchQuery($pre['title']);
 
+		if ($join === '') {
+
+			return $matching;
+		}
+
 		//Find release matches with fulltext and then identify exact matches with cleaned LIKE string
 		$res = $this->pdo->queryDirect(
-						sprintf("
-							SELECT r.id AS releases_id, r.name, r.searchname,
-								r.groups_id, r.categories_id
-							FROM releases r
-							%1\$s
-							AND (r.name %2\$s OR r.searchname %2\$s)
-							AND r.predb_id = 0
-							LIMIT 21",
-							$join,
-							$this->pdo->likeString($pre['title'], true, true)
-						)
+			sprintf("
+				SELECT r.id AS releases_id, r.name, r.searchname,
+					r.groups_id, r.categories_id
+				FROM releases r
+				%1\$s
+				AND (r.name %2\$s OR r.searchname %2\$s)
+				AND r.predb_id = 0
+				LIMIT 21",
+				$join,
+				$this->pdo->likeString($pre['title'], true, true)
+			)
 		);
 
 		if ($res !== false) {
@@ -756,12 +761,12 @@ class NameFixer
 		// Run if row count is positive, but do not run if row count exceeds 10 (as this is likely a failed title match)
 		if ($total > 0 && $total <= 15 && $res instanceof \Traversable) {
 			foreach ($res as $row) {
-					if ($pre['title'] !== $row['searchname']) {
-						$this->updateRelease($row, $pre['title'], $method = "Title Match source: " . $pre['source'], $echo, "PreDB FT Exact, ", $namestatus, $show, $pre['predb_id']);
-						$matching++;
-					} else {
-						$this->_updateSingleColumn('predb_id', $pre['predb_id'], $row['releases_id']);
-					}
+				if ($pre['title'] !== $row['searchname']) {
+					$this->updateRelease($row, $pre['title'], $method = "Title Match source: " . $pre['source'], $echo, "PreDB FT Exact, ", $namestatus, $show, $pre['predb_id']);
+					$matching++;
+				} else {
+					$this->_updateSingleColumn('predb_id', $pre['predb_id'], $row['releases_id']);
+				}
 			}
 		} elseif ($total >= 16) {
 			$matching = -1;
@@ -771,31 +776,39 @@ class NameFixer
 
 	protected function _preFTsearchQuery($preTitle)
 	{
-		switch (nZEDb_RELEASE_SEARCH_TYPE) {
-			case ReleaseSearch::SPHINX:
-				$titlematch = SphinxSearch::escapeString($preTitle);
-				$join = sprintf(
+		$join = '';
+
+		if (strlen($preTitle) >= 15 && preg_match(self::PREDB_REGEX, $preTitle)) {
+			switch (nZEDb_RELEASE_SEARCH_TYPE) {
+				case ReleaseSearch::SPHINX:
+					$titlematch = SphinxSearch::escapeString($preTitle);
+					$join .= sprintf(
 						'INNER JOIN releases_se rse ON rse.id = r.id
 						WHERE rse.query = "@(name,searchname,filename) %s;mode=extended"',
 						$titlematch
-				);
-				break;
-			case ReleaseSearch::FULLTEXT:
-			default:
-				//Remove all non-printable chars from PreDB title
-				preg_match_all('#[a-zA-Z0-9]{3,}#', $preTitle, $matches, PREG_PATTERN_ORDER);
-				$titlematch = '+' . implode(' +', $matches[0]);
-				$join = sprintf(
+					);
+					break;
+				case ReleaseSearch::FULLTEXT:
+					//Remove all non-printable chars from PreDB title
+					preg_match_all('#[a-zA-Z0-9]{3,}#', $preTitle, $matches, PREG_PATTERN_ORDER);
+					$titlematch = '+' . implode(' +', $matches[0]);
+					$join .= sprintf(
 						"INNER JOIN release_search_data rs ON rs.releases_id = r.id
 						WHERE
 							(MATCH (rs.name) AGAINST ('%1\$s' IN BOOLEAN MODE)
 							OR MATCH (rs.searchname) AGAINST ('%1\$s' IN BOOLEAN MODE))",
 						$titlematch
-				);
-				break;
+					);
+					break;
+				case ReleaseSearch::LIKE:
+					// Do not add a JOIN for FT, let the query run in LIKE mode only (slow)
+					$join .= 'WHERE 1=1 ';
+					break;
+			}
 		}
 		return $join;
 	}
+
 
 	public function getPreFileNames($args = [])
 	{
